--- a/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/app/src/main/res/layout/activity_reserva_sala.xml
@@ -113,7 +113,9 @@
         app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
         tools:ignore="MissingConstraints">
 
-
+   <ScrollView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content">
 
      <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutExpand"
@@ -235,7 +237,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+   </ScrollView>
 
 </androidx.cardview.widget.CardView>
 
