--- a/app/src/main/res/layout/item_cadastro_reserva.xml
+++ b/app/src/main/res/layout/item_cadastro_reserva.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
@@ -23,25 +23,36 @@
                 android:layout_height="90dp"
                 android:layout_margin="30dp"
                 android:layout_marginEnd="30dp"
+                android:textSize="25dp"
                 android:textColor="@color/corBack"
                 android:textColorHint="@android:color/black"
                 android:inputType="textMultiLine"
                 android:hint=" Descricao do uso da sala" />
         </LinearLayout>
 
+    <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:cardElevation="0dp"
+            app:cardMaxElevation="0dp"
+            app:cardCornerRadius="1dp"
+            app:cardUseCompatPadding="true"
+            app:cardPreventCornerOverlap="false"
+            android:background="@null"
+            android:padding="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp">
+            android:layout_height="40dp">
 
 
             <ImageButton
                 android:id="@+id/btn_data"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
                 android:background="@color/corBranco"
-                android:layout_marginStart="20dp"
-                app:srcCompat="@drawable/icon_calendario" />
+                android:layout_marginStart="80dp"
+                app:srcCompat="@drawable/icon_calendarioo" />
 
             <TextView
                 android:id="@+id/text_print_data"
@@ -49,27 +60,37 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:text="Data da reuniao"
+                android:textSize="20dp"
                 android:textAlignment="textEnd"
                 android:textColor="@color/corBack">
 
             </TextView>
+
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
-
-
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:cardElevation="0dp"
+            app:cardMaxElevation="0dp"
+            app:cardCornerRadius="1dp"
+            app:cardUseCompatPadding="true"
+            app:cardPreventCornerOverlap="false"
+            android:background="@null">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp">
+            android:layout_height="40dp">
 
 
             <ImageButton
                 android:id="@+id/btn_horai"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
                 android:background="@color/corBranco"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="80dp"
                 app:srcCompat="@drawable/icon_horai" />
 
             <TextView
@@ -80,24 +101,35 @@
                 android:textAlignment="center"
                 android:layout_marginHorizontal="10dp"
                 android:hint="Horario Inicial"
+                android:textSize="20dp"
                 android:textColorHint="@android:color/black">
 
             </TextView>
 
-
-
         </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:cardElevation="0dp"
+            app:cardMaxElevation="0dp"
+            app:cardCornerRadius="1dp"
+            app:cardUseCompatPadding="true"
+            app:cardPreventCornerOverlap="false"
+            android:background="@null">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp">
+            android:layout_height="40dp">
 
             <ImageButton
                 android:id="@+id/btn_horaf"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
                 android:background="@color/corBranco"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="80dp"
                 app:srcCompat="@drawable/icon_horai" />
 
             <TextView
@@ -107,13 +139,14 @@
                 android:textAlignment="center"
                 android:textColor="@color/corBack"
                 android:layout_marginHorizontal="10dp"
+                android:textSize="20dp"
                 android:textColorHint="@android:color/black"
                 android:hint="Horario final">
 
             </TextView>
-
-
         </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <Button
             android:id="@+id/btFinalReserva"
