--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,25 +14,31 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize" />
 
 
 
-    <com.google.android.material.tabs.TabLayout
+   <!-- <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:tabTextColor="@color/corBranco"
         android:background="@color/colorPrimary"
         />
-
-
+-->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:tabTextColor="@color/corBranco"
+        android:background="@color/colorPrimary"
+        app:tabIndicatorColor="@color/corBarView">
+    </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/viewpager"
-        android:background="@color/corBranco"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
