--- a/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/app/src/main/res/layout/activity_reserva_sala.xml
@@ -106,10 +106,15 @@
 
    <androidx.cardview.widget.CardView
         android:id="@+id/card_reserva"
-        android:layout_width="350dp"
+        android:layout_width="390dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:background="@drawable/borda_sombreada"
+        android:background="@null"
+       app:cardElevation="0dp"
+       app:cardMaxElevation="0dp"
+       app:cardCornerRadius="1dp"
+       app:cardUseCompatPadding="true"
+       app:cardPreventCornerOverlap="false"
         app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
         tools:ignore="MissingConstraints">
 
@@ -119,12 +124,12 @@
 
      <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutExpand"
-        android:layout_width="350dp"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@drawable/borda_sombreada"
          app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
-        android:visibility="gone">
+        android:visibility="visible">
 
 
 
