--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#1a237e</color>
     <color name="colorPrimaryDark">#000051</color>
     <color name="colorAccent">#5E6200EE</color>
+    <color name="corBarView">#fa8100</color>
 
     <color name="corBack">#000000</color>
     <color name="corBranco">#ffffff</color>
