--- a/app/src/main/res/layout/layout_login_usuario.xml
+++ b/app/src/main/res/layout/layout_login_usuario.xml
@@ -16,33 +16,52 @@
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/icon_wise" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ed_login_email"
-        android:drawableLeft="@drawable/icon_email"
-        android:textColor="@color/corBack"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/iv_user"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:padding="8dp"
-        android:hint=" Email"
-        android:inputType="textEmailAddress" />
+        android:hint="Email"
 
-    <EditText
+        android:layout_below="@+id/iv_user"
+        android:layout_marginBottom="8dp"
+        app:boxCornerRadiusBottomEnd="8dp"
+        app:boxCornerRadiusBottomStart="8dp"
+        app:boxCornerRadiusTopEnd="8dp"
+        app:boxCornerRadiusTopStart="8dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:imeOptions="actionDone"
+            android:inputType="textEmailAddress"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ed_login_senha"
-        android:drawableLeft="@drawable/icon_senhaa"
-        android:textColor="@color/corBack"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/ed_login_email"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:padding="8dp"
-        android:hint=" Senha"
-        android:inputType="textPassword" />
+        android:hint="Senha"
+
+        android:layout_below="@+id/ed_login_email"
+        android:layout_marginBottom="8dp"
+        app:boxCornerRadiusBottomEnd="8dp"
+        app:boxCornerRadiusBottomStart="8dp"
+        app:boxCornerRadiusTopEnd="8dp"
+        app:boxCornerRadiusTopStart="8dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
 
 
