--- a/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/app/src/main/res/layout/activity_reserva_sala.xml
@@ -60,6 +60,22 @@
                 app:layout_constraintTop_toTopOf="@id/imageView2"
                 app:layout_constraintVertical_bias="0.74" />
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_infor"
+                android:layout_width="382dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_margin="16dp"
+                android:backgroundTint="@color/corBranco"
+                android:clickable="true"
+                android:src="@android:drawable/ic_dialog_info"
+                android:tint="#1A237E"
+                app:layout_constraintBottom_toBottomOf="@id/imageView2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/imageView2"
+                app:layout_constraintVertical_bias="0.74"
+                app:rippleColor="@color/colorPrimary" />
+
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
@@ -69,41 +85,6 @@
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="0dp" />
 
-            <ImageButton
-                android:id="@+id/btn_infor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="70dp"
-                android:layout_marginEnd="1dp"
-                android:layout_marginBottom="20dp"
-                android:background="@null"
-                android:foregroundGravity="left"
-                app:layout_constraintBottom_toBottomOf="@id/tx_caracteristicas_sala"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.76"
-                app:layout_constraintStart_toStartOf="@+id/tx_caracteristicas_sala"
-
-                app:srcCompat="@drawable/icon_btn_baixo"
-                tools:ignore="MissingConstraints" />
-
-
-            <TextView
-                android:id="@+id/tx_caracteristicas_sala"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:layout_margin="8dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginEnd="100dp"
-                android:text=" Caracteristicas da Sala "
-                android:textAlignment="center"
-                android:textColor="@color/corBack"
-                android:textSize="23dp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/imageView2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.25"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"></TextView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_reserva"
@@ -116,7 +97,7 @@
                 app:cardMaxElevation="0dp"
                 app:cardPreventCornerOverlap="false"
                 app:cardUseCompatPadding="true"
-                app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
+                app:layout_constraintTop_toBottomOf="@id/imageView2"
                 tools:ignore="MissingConstraints">
 
                 <ScrollView
@@ -128,21 +109,35 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala">
 
+
+                        <TextView
+                            android:id="@+id/tx_caracteristicas_sala"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:layout_margin="8dp"
+                            android:text="Caracteristicas da sala"
+                            android:textAlignment="textStart"
+                            android:textColor="@color/corTextoClaro"
+                            android:textSize="25dp"
+                            android:textStyle="normal"
+                            app:layout_constraintVertical_bias="0.0"
+                            tools:ignore="MissingConstraints"
+                            tools:layout_editor_absoluteX="0dp"></TextView>
 
                         <TextView
                             android:id="@+id/tx_quantPessoas_sala"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                             android:layout_margin="8dp"
-                            android:text=" Quantidade de pessoas sentadas:"
+                            android:text=" Quantidade de midias da sala:"
                             android:textAlignment="textStart"
                             android:textColor="@color/corTextoClaro"
                             android:textSize="20dp"
                             android:textStyle="normal"
-                            app:layout_constraintVertical_bias="0.0"
+                            app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
                             tools:ignore="MissingConstraints"
                             tools:layout_editor_absoluteX="0dp"></TextView>
 
