--- a/app/src/main/res/layout/item_cadastro_reserva.xml
+++ b/app/src/main/res/layout/item_cadastro_reserva.xml
@@ -23,94 +23,94 @@
                 android:layout_height="90dp"
                 android:layout_margin="30dp"
                 android:layout_marginEnd="30dp"
-                android:textSize="25dp"
+                android:hint=" Descricao do uso da sala"
+                android:inputType="textMultiLine"
                 android:textColor="@color/corBack"
                 android:textColorHint="@android:color/black"
-                android:inputType="textMultiLine"
-                android:hint=" Descricao do uso da sala" />
+                android:textSize="25dp" />
         </LinearLayout>
 
-    <androidx.cardview.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/cardData"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:layout_marginEnd="10dp"
+            android:background="@null"
+            android:padding="20dp"
+            app:cardCornerRadius="1dp"
             app:cardElevation="0dp"
             app:cardMaxElevation="0dp"
-            app:cardCornerRadius="1dp"
-            app:cardUseCompatPadding="true"
             app:cardPreventCornerOverlap="false"
-            android:background="@null"
-             android:layout_marginEnd="10dp"
-            android:padding="20dp">
+            app:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:gravity="start">
-
-
-            <ImageButton
-                android:id="@+id/btn_data"
-                android:layout_width="60dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginStart="30dp"
-                android:background="@color/corBranco"
-                app:srcCompat="@drawable/icon_calendarioo" />
+                android:gravity="start">
 
-            <TextView
-                android:id="@+id/text_print_data"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:text="Data da reuniao"
-                android:textAlignment="textEnd"
-                android:textColor="@color/corBack"
-                android:textSize="25dp">
 
-            </TextView>
+                <ImageButton
+                    android:id="@+id/btn_data"
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="30dp"
+                    android:background="@color/corBranco"
+                    app:srcCompat="@drawable/icon_calendarioo" />
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/text_print_data"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:text="Data da reuniao"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/corBack"
+                    android:textSize="25dp">
+
+                </TextView>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardHoraI"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:background="@null"
+            app:cardCornerRadius="1dp"
             app:cardElevation="0dp"
             app:cardMaxElevation="0dp"
-            app:cardCornerRadius="1dp"
-            app:cardUseCompatPadding="true"
             app:cardPreventCornerOverlap="false"
-            android:background="@null">
+            app:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
 
 
-            <ImageButton
-                android:id="@+id/btn_horai"
-                android:layout_width="70dp"
-                android:layout_height="50dp"
-                android:background="@color/corBranco"
-                android:layout_marginStart="30dp"
-                app:srcCompat="@drawable/icon_horai" />
+                <ImageButton
+                    android:id="@+id/btn_horai"
+                    android:layout_width="70dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="30dp"
+                    android:background="@color/corBranco"
+                    app:srcCompat="@drawable/icon_horai" />
 
-            <TextView
-                android:id="@+id/text_horaioInicial"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/corBack"
-                android:layout_marginHorizontal="10dp"
-                android:hint="Horario Inicial"
-                android:textSize="25dp"
-                android:textAlignment="textStart"
-                android:textColorHint="@android:color/black">
+                <TextView
+                    android:id="@+id/text_horaioInicial"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:hint="Horario Inicial"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    android:textSize="25dp">
 
-            </TextView>
+                </TextView>
 
-        </LinearLayout>
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
@@ -118,49 +118,49 @@
             android:id="@+id/cardHoraF"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:background="@null"
+            app:cardCornerRadius="1dp"
             app:cardElevation="0dp"
             app:cardMaxElevation="0dp"
-            app:cardCornerRadius="1dp"
-            app:cardUseCompatPadding="true"
             app:cardPreventCornerOverlap="false"
-            android:background="@null">
+            app:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
 
-            <ImageButton
-                android:id="@+id/btn_horaf"
-                android:layout_width="70dp"
-                android:layout_height="50dp"
-                android:background="@color/corBranco"
-                android:layout_marginStart="30dp"
-                app:srcCompat="@drawable/icon_horai" />
+                <ImageButton
+                    android:id="@+id/btn_horaf"
+                    android:layout_width="70dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="30dp"
+                    android:background="@color/corBranco"
+                    app:srcCompat="@drawable/icon_horai" />
 
-            <TextView
-                android:id="@+id/text_horaioFinal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="textStart"
-                android:textColor="@color/corBack"
-                android:layout_marginHorizontal="10dp"
-                android:textSize="25dp"
-                android:textColorHint="@android:color/black"
-                android:hint="Horario final">
+                <TextView
+                    android:id="@+id/text_horaioFinal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:hint="Horario final"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    android:textSize="25dp">
 
-            </TextView>
-        </LinearLayout>
+                </TextView>
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
         <Button
             android:id="@+id/btFinalReserva"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/botao_radius"
             android:text="Ok"
-            android:textColor="@color/corBranco"
-            android:layout_height="wrap_content">
+            android:textColor="@color/corBranco">
 
         </Button>
 
