--- a/app/src/main/res/layout/item_lista_reservas.xml
+++ b/app/src/main/res/layout/item_lista_reservas.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/corBranco">
+    android:background="@color/corBranco"
+    android:orientation="vertical">
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card_reserva"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardCornerRadius="10dp"
-        android:background="@drawable/borda_sombreada">
+        android:background="@drawable/borda_sombreada"
+        app:cardCornerRadius="10dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
 
 
             <TextView
@@ -27,77 +27,75 @@
                 android:layout_margin="8dp"
                 android:layout_marginTop="10dp"
                 android:padding="8dp"
+                android:text="Nome Sala"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:text="Nome Sala"
                 android:textStyle="bold"
                 app:layout_constraintVertical_bias="1.0"
+                tools:ignore="MissingConstraints" />
+
+
+            <TextView
+                android:id="@+id/item_data_reserva"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/item_data_reserva"
+                android:padding="5dp"
+                android:text="Data"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                app:layout_constraintTop_toBottomOf="@id/item_datahora_final"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/item_datahora_inicial"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:hint="Horario Inicial"
+                android:padding="5dp"
+                android:textAlignment="textStart"
+                android:textColor="@color/corBack"
+                android:textColorHint="@android:color/black"
+                app:layout_constraintTop_toBottomOf="@id/item_nome_sala"
+                tools:ignore="MissingConstraints">
+
+            </TextView>
+
+
+            <TextView
+                android:id="@+id/item_datahora_final"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="Horario final"
+                android:padding="5dp"
+                android:textAlignment="textStart"
+                android:textColor="@color/corBack"
+                android:textColorHint="@android:color/black"
+                app:layout_constraintTop_toBottomOf="@+id/item_datahora_inicial"
                 tools:ignore="MissingConstraints"
-                />
+                tools:layout_editor_absoluteX="0dp">
+
+            </TextView>
 
 
-                <TextView
-                    android:id="@+id/item_datahora_inicial"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:hint="Horario Inicial"
-                    android:padding="5dp"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/corBack"
-                    app:layout_constraintTop_toBottomOf="@id/item_nome_sala"
-                    android:textColorHint="@android:color/black"
-                    tools:ignore="MissingConstraints">
-
-                </TextView>
-
-
-        <TextView
-            android:id="@+id/item_datahora_final"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_marginTop="8dp"
-            android:hint="Horario final"
-            android:padding="5dp"
-            android:textAlignment="textStart"
-            android:textColor="@color/corBack"
-            android:textColorHint="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@+id/item_datahora_inicial"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="0dp">
-
-        </TextView>
-
-
-        <TextView
-            android:id="@+id/item_data_reserva"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/item_data_reserva"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:text="Data"
-            android:textStyle="normal"
-            android:padding="5dp"
-            app:layout_constraintTop_toBottomOf="@id/item_datahora_final"
-            tools:ignore="MissingConstraints" />
-
-
-        <TextView
+            <TextView
                 android:id="@+id/item_descricao_reserva"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/item_datahora_final"
+                android:padding="5dp"
+                android:text="reuniao sobre os trainees de pa"
                 android:textColor="#000000"
                 android:textSize="16sp"
-                android:text="reuniao sobre os trainees de pa"
                 android:textStyle="normal"
-                android:padding="5dp"
                 app:layout_constraintTop_toBottomOf="@id/item_data_reserva"
                 tools:ignore="MissingConstraints" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
