--- a/app/src/main/res/layout/layout_cadastro_usuario.xml
+++ b/app/src/main/res/layout/layout_cadastro_usuario.xml
@@ -9,23 +9,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_user"
-        android:layout_width="150dp"
-        android:layout_height="120dp"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/icon_wise"/>
+        <ImageView
+            android:id="@+id/iv_user"
+            android:layout_width="150dp"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/icon_wise" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ed_cadastro_nome"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:hint="Nome"
-
             android:layout_below="@+id/iv_user"
+            android:layout_centerHorizontal="true"
+
             android:layout_marginBottom="8dp"
+            android:hint="Nome"
             app:boxCornerRadiusBottomEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
             app:boxCornerRadiusTopEnd="8dp"
@@ -33,9 +33,9 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
-                android:inputType="textPersonName"
-                android:layout_height="wrap_content" />
+                android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -44,11 +44,11 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:hint="Email"
-
             android:layout_below="@+id/ed_cadastro_nome"
+            android:layout_centerHorizontal="true"
+
             android:layout_marginBottom="8dp"
+            android:hint="Email"
             app:boxCornerRadiusBottomEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
             app:boxCornerRadiusTopEnd="8dp"
@@ -56,11 +56,10 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
-                android:inputType="textEmailAddress"
-                android:layout_height="wrap_content" />
+                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
-
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -68,11 +67,11 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:hint="Senha"
-
             android:layout_below="@+id/ed_cadastro_email"
+            android:layout_centerHorizontal="true"
+
             android:layout_marginBottom="8dp"
+            android:hint="Senha"
             app:boxCornerRadiusBottomEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
             app:boxCornerRadiusTopEnd="8dp"
@@ -80,36 +79,35 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:layout_height="wrap_content" />
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
-
         <Spinner
-        android:id="@+id/sp_organizacao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ed_cadastro_senha"
-        android:layout_alignStart="@+id/ed_cadastro_senha"
-        android:layout_alignLeft="@+id/ed_cadastro_senha"
-        android:visibility="invisible">
+            android:id="@+id/sp_organizacao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ed_cadastro_senha"
+            android:layout_alignStart="@+id/ed_cadastro_senha"
+            android:layout_alignLeft="@+id/ed_cadastro_senha"
+            android:visibility="invisible">
 
         </Spinner>
 
-    <Button
-        android:id="@+id/btn_cadastrar"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/sp_organizacao"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/botao_radius"
-        android:clickable="true"
-        android:text="Cadastrar"
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
+        <Button
+            android:id="@+id/btn_cadastrar"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/sp_organizacao"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/botao_radius"
+            android:clickable="true"
+            android:text="Cadastrar"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
     </RelativeLayout>
 
 </ScrollView>
