bug da lista arrumado

--- a/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/app/src/main/res/layout/activity_reserva_sala.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/corBranco"
     android:orientation="vertical"
     tools:context=".activitysnormal.ReservaSalaActivity">
@@ -108,7 +108,7 @@
                     tools:ignore="MissingConstraints">
 
                     <ScrollView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         tools:ignore="MissingConstraints">
 
